--- a/src/main/webapp/app/init.xhtml
+++ b/src/main/webapp/app/init.xhtml
@@ -12,8 +12,11 @@
     <ui:define name="content">
         <h:form>
             <!--<h:outputText value="#{requestScope['javax.servlet.forward.request_uri']}"/>-->
-            <p:commandButton styleClass="admin-dashboard-button" value="Últ. preventivos" action="ultimosPreventivos"
+            <c:if test="#{identity.loggedIn and (authorizationChecker.admin or authorizationChecker.ventanilla) }">
+                <p:commandButton styleClass="admin-dashboard-button" value="Ventanilla" action="createVentanilla"
                              ajax="false"/>
+            </c:if>
+
             <p:commandButton styleClass="admin-dashboard-button" value="Preventivos" action="preventivos" ajax="false"/>
             <p:commandButton styleClass="admin-dashboard-button" value="Reporte" action="reportePreventivos"
                              ajax="false"/>
@@ -25,8 +28,8 @@
             <!--
                         <p:commandButton styleClass="admin-dashboard-button" value="IPs" action="ips" ajax="false"/>
             -->
-            <c:if test="#{identity.loggedIn and (authorizationChecker.admin or authorizationChecker.historico) }">
-                <br/>
+
+            <br/>
                 <!--
                                 <p:commandButton styleClass="admin-dashboard-button" value="Celdas 3G" action="celdas3G"
                                                  ajax="false" disabled="true"/>
@@ -47,11 +50,7 @@
                 <p:commandButton styleClass="admin-dashboard-button" value="Estructura" action="estructuras"
                                  ajax="false"/>
                 <br/>
-                <p:commandButton styleClass="admin-dashboard-button" value="Auditoría" disabled="true"
-                                 action="#{auditoriaController.queryAudit}"/>
-                <p:commandButton styleClass="admin-dashboard-button" value="Usuarios" action="usuarios"
-                                 ajax="false" disabled="false"/>
-            </c:if>
+
         </h:form>
     </ui:define>
 </ui:composition>
