--- a/src/main/webapp/app/ventanillaCreate.xhtml
+++ b/src/main/webapp/app/ventanillaCreate.xhtml
@@ -34,7 +34,14 @@
                                 <p:column>
                                     <p:outputLabel for="sede" value="Sede"/>
                                 </p:column>
+                                <p:column> <p:outputLabel for="anio" value="Año"/> </p:column>
+                                <p:column> <p:outputLabel for="bis" value="Bis"/> </p:column>
                                 <p:column> <p:outputLabel for="fecha" value="Fecha"/> </p:column>
+                                <p:column> <p:outputLabel for="etapa" value="Etapa"/> </p:column>
+                                <p:column> <p:outputLabel for="ente" value="Ente emisor"/> </p:column>
+                                <p:column> <p:outputLabel for="escribano" value="Escribano"/> </p:column>
+                                <p:column> <p:outputLabel for="fechaEmision" value="Emisión"/> </p:column>
+                                <p:column> <p:outputLabel for="ficha" value="Ficha"/> </p:column>
                             </p:row>
                             <p:row>
                                 <p:column>
@@ -87,6 +94,18 @@
                                                                                         listener="#{ventanillaController.handleSitioChange}"/>
                                         -->
                                     </p:autoComplete>
+                                </p:column>
+
+                                <p:column>
+                                    <p:inputText id="anio" value="#{ventanillaController.item.anio}" required="true">
+                                        <p:keyFilter preventPaste="false" mask="pint"/>
+                                    </p:inputText>
+                                </p:column>
+
+                                <p:column>
+                                    <p:inputText id="bis" value="#{ventanillaController.item.bis}" required="true">
+                                        <p:keyFilter preventPaste="false" mask="pint"/>
+                                    </p:inputText>
                                 </p:column>
 
                                 <p:column><p:calendar id="fecha" value="#{ventanillaController.item.fecha}"
