--- a/src/main/webapp/app/ventanillaCreate.xhtml
+++ b/src/main/webapp/app/ventanillaCreate.xhtml
@@ -162,7 +162,7 @@
                                                     completeMethod="#{ventanillaController.findEscribano}"
                                                     forceSelection="true"
                                                     var="s"
-                                                    itemLabel="#{s ne null ? s.codigo.concat(' - ').concat(s.descripcion) : ''}"
+                                                    itemLabel="#{s ne null ? ''.concat(s.codigo).concat(' - ').concat(s.nombre) : ''}"
                                                     itemValue="#{s}"
                                                     converter="genericMapConverter"
                                                     cache="true"
@@ -170,8 +170,8 @@
                                         <p:column headerText="Código">
                                             #{s.codigo}
                                         </p:column>
-                                        <p:column headerText="Descripción">
-                                            #{s.descripcion}
+                                        <p:column headerText="Nombre">
+                                            #{s.nombre}
                                         </p:column>
                                         <!--
                                                                                 <p:ajax event="itemSelect"
@@ -202,7 +202,7 @@
                                                     completeMethod="#{ventanillaController.findTasa}"
                                                     forceSelection="true"
                                                     var="s"
-                                                    itemLabel="#{s ne null ? s.codigo.concat(' - ').concat(s.descripcion) : ''}"
+                                                    itemLabel="#{s ne null ? s.codigo.concat(' - ').concat(s.nombre) : ''}"
                                                     itemValue="#{s}"
                                                     converter="genericMapConverter"
                                                     cache="true"
@@ -210,8 +210,8 @@
                                         <p:column headerText="Código">
                                             #{s.codigo}
                                         </p:column>
-                                        <p:column headerText="Descripción">
-                                            #{s.descripcion}
+                                        <p:column headerText="Nombre">
+                                            #{s.nombre}
                                         </p:column>
                                         <!--
                                                                                 <p:ajax event="itemSelect"
