--- a/src/main/webapp/app/ventanillaCreate.xhtml
+++ b/src/main/webapp/app/ventanillaCreate.xhtml
@@ -58,11 +58,8 @@
                                         <p:column headerText="Descripción">
                                             #{r.descripcion}
                                         </p:column>
-                                        <!--
-                                                                                <p:ajax event="itemSelect"
-                                                                                        update="nodo"
-                                                                                        listener="#{ventanillaController.handleSitioChange}"/>
-                                        -->
+                                        <p:ajax event="itemSelect"
+                                                listener="#{ventanillaController.handleRegistroChange}"/>
                                     </p:autoComplete>
                                 </p:column>
 
@@ -240,7 +237,7 @@
                             </f:facet>
                             <p:row>
                                 <p:column>
-                                    <p:autoComplete id="seccion" value="#{ventanillaController.selectedSeccion}"
+                                    <p:autoComplete id="seccion" value="#{ventanillaController.seccion}"
                                                     dropdown="true" minQueryLength="1" scrollHeight="250"
                                                     required="true"
                                                     completeMethod="#{ventanillaController.findSeccion}"
